# backtest-engine

./: .gitignore  README.md  nl_backtest.py  pyproject.toml  requirements.txt  run.py  run_cross_sectional.py  run_overfitting_study.py
.github/workflows/: tests.yml
docs/: DESIGN.md  METHODOLOGY.md  RESULTS.md  SELECTION_BIAS.md  SELECTION_BIAS_RESULTS.md
engine/: backtest.py  data.py  events.py  execution.py  metrics.py  portfolio.py  selection_bias.py  strategy.py
tests/: test_cross_sectional.py  test_cross_sectional_metrics.py  test_engine.py  test_portfolio.py  test_selection_bias.py
