[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-engine-asoracca"
version = "1.0.0"
description = "A small event-driven backtesting engine with next-bar execution and auditable ledgers"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "pandas>=2.1", "yfinance>=0.2.40", "matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.ruff]
line-length = 110
